--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>CaletaShow</title>
+	<title>Hola</title>
 </head>
 <body>
-	<h1>Hola mamá</h1>
-    <p>Que onda.</p>
+	hola qsaxa
 </body>
 </html>
